Add a blogs page

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 # source: _pages
 include: [_pages]
 destination: docs
-baseurl: "Healthy-Foods"
+# baseurl: "/Healthy-Foods"
+baseurl: ""
 url: ""
 
 # Build settings
