Add recipes section
Break apart recipes into collections

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,17 @@ url: ""
 # Build settings
 markdown: kramdown
 
+collections_dir: collections
+
+collections:
+    recipes:
+        class: recipes
+        output: true
+        permalink: /recipes/:title
+    posts:
+        class: posts
+        output: true
+        permalink: /posts/:title
 
 sass:
     sass_dir: _sass
